--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -116,7 +116,7 @@
     justify-content: center;
     align-items: center;
     &:hover {
-      background-color: #f4f4f4;
+      background-color: rgba(0, 0, 0, 0.3);
     }
   }
 }
